--- a/Hebergement marseille.css
+++ b/Hebergement marseille.css
@@ -1,17 +1,22 @@
-section:first-child{
+main{
+    display: flex;
+    flex-wrap: wrap;
+    font-family: 'Raleway', sans-serif;
+}
+
+.section1, aside{
     background-color: rgb(201, 199, 199);
     border-radius: 20px;
     margin: 2rem;
-    font-family: 'Raleway', sans-serif;
     height: 39rem;
     width: 54rem;
-
 }
 .bloccarte{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
+
 figure{
     background-color: white;
     width: 15rem;
@@ -22,14 +27,10 @@ figure{
     margin: 1rem;
 }
 
-img{
-    /* width: 19rem; */
+.section1 img{
     height: 55%;
-    background-size: contain;
-    /* display: block; */
-    /* margin-left: auto;
-    margin-right: auto; */
-    padding: 0.5rem;
+    object-fit: cover;
+    padding: 0.3rem;
     border-radius: 20px 20px 0 0;
 }
 
@@ -60,4 +61,63 @@ h2{
     font-size: 16px;
     padding-left: 2.5rem;
     padding-bottom: 3rem;
+}
+aside{
+    width: 27rem;
+}
+.bloccarteaside{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    /* margin-left: 3rem;
+    margin-right: 3rem; */
+}
+
+aside img{
+    width: 40%;
+    object-fit: cover;
+    padding: 0.4rem;
+    border-radius: 20px 0 0 20px;
+}
+aside figure{
+    width: 22rem;
+    height: 8rem;
+    display: flex;
+    flex-direction: row;
+    margin: 1rem;
+    
+}
+aside ul{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1rem;
+}
+
+.section2{
+    width: 100%;
+    height: 35rem;
+}
+
+.bloccarte2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.bloccarte2 figure{
+    height: 30rem;
+    width: 19rem;
+    border-radius: 20px;
+    box-shadow: 1px 1px 0.2em 0.1em gray;
+}
+
+.section2 img{
+    object-fit: cover;
+    height: 90%;
+    border-radius: 20px 20px 0 0;
+}
+figcaption{
+    padding-top: 1em;
+    padding-left: 1em;
+    font-weight: bold;
 }
