--- a/hebergement_marseille.css
+++ b/hebergement_marseille.css
@@ -7,6 +7,147 @@ main{
     width: 100%;
 }
 
+/* HEADER */
+
+header{
+    margin: 3rem;
+}
+
+.blocheadertext {
+    margin-top: 2em;
+}
+
+.headertext {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.booki img{
+    height: 1.5em;
+}
+
+.headerlist li {
+    display: inline;
+    font-size: 1.2em;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.headerlist li:hover {
+    padding-top: 2.3em;
+    color: #0065FC;
+    border-top: solid #0065FC;
+}
+
+.description p {
+   margin: 0;
+   padding: 0.2em;
+   font-weight: 400;
+}
+.description p:nth-child(1) {
+    font-weight: 700;
+    font-size: 1.5em;
+}
+
+ RECHERCHE 
+
+.search {
+    display: flex; 
+}
+
+.search :hover {
+    color: black;
+}
+
+.fa-location-dot {
+    background-color: rgb(235, 230, 230);
+    border-radius: 10px 0px 0px 10px;
+    padding: 15px 15px 15px 15px;
+    font-size: 25px;
+}
+
+input{
+    padding-left: 15px;
+    border: none;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+    font-size: large;
+}
+
+button {
+    text-align: center;
+    font-size: large;
+    color: white;
+    background-color:rgb(12, 133, 231);
+    border: none;
+    border-radius: 0px 15px 15px 0px;
+    padding: 15px 25px 15px 25px;
+}
+
+NAVIGATION 
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 1em;
+}
+
+.nav p {
+    font-weight: 700;
+    font-size: 1.3em;
+}
+
+.nav li {
+    display: inline;
+    margin-right: 2em;
+    padding: 0.8em 1.2em 0.6em 0.6em;
+    font-size: large;
+    border: solid;
+    border-color: #d9d9d9;
+    border-radius: 30px 30px 30px 30px;
+}
+
+.nav li:hover {
+    background-color: #DEEBFF;
+    border-color: #DEEBFF;
+}
+
+icone 
+.fa-money-bill-wave, 
+.fa-person, 
+.fa-heart, 
+.fa-dog, 
+.fa-info{
+    color: #0065FC;
+    padding: 15px;
+    font-size: 1.3em;
+}
+
+span {
+    margin-left: 0.5em;
+    font-family: 'raleway', sans-serif;
+    font-weight: 400;
+}
+.blocheadertext {
+    margin-top: 2em;
+}
+
+.headertext {
+    display: flex;
+    Afficher plus
+message.txt
+3 Ko
+.fa-info {
+    padding:  5px 8px 5px 8px;
+    border: solid 1px;
+    border-color: lightgrey;
+    border-radius: 50px 50px 50px 50px;
+    font-size: 0.6em;
+}
+}
+
 /* Section1 et 2 and Aside */
 
 .section1 figure, aside figure, .section2 figure{
@@ -54,6 +195,10 @@ main{
     color: blue;
     padding-top: 0.2rem;
 } 
+
+.star-grey{
+    color: grey;
+}
 
 .section1 h1, aside h1{
     padding-left: 2.5rem;  
@@ -115,6 +260,11 @@ aside ul{
     padding-left: 2rem;
     padding-right: 2rem;
     padding-top: 1rem;
+}
+
+.icon-stat{
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* Section2 */
@@ -221,7 +371,7 @@ footer{
     }
 }   
 
-@media all and (max-width: 1200px){
+@media screen and (max-width: 1200px){
     .section1 li:first-child,  aside li:first-child{
         font-size: 11px;
     }
@@ -233,7 +383,7 @@ footer{
 
 /* Responsive for tablet */
 
-@media all and (max-width: 750px) {
+@media screen and (max-width: 750px) {
     body{
         justify-content: center;
     }
@@ -259,21 +409,30 @@ footer{
         width: 30%;
         margin: 0.5em;
     }
-    /* aside li:first-child{
+    aside li:first-child{ 
         font-size: 9px;
     }
     aside li:nth-child(2), aside li:nth-child(3){
         font-size: 8px;
-    } */
+    } 
     .section2{
         width: 100%;
         height: 40%;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 5rem;
     }
     .section2 figure{
-        width: 20%;
+        width: 18%;
         height: auto;
+    }
+    .section2 img{
+        height: 75%;
+    }
+    figcaption{
+        font-size: 10px;
+        padding-bottom: 1em;
+        padding-top: 1em;
     }
     .apropos{ 
         width: 90%;
@@ -287,4 +446,57 @@ footer{
 
 /* Responsive for mobile */
 
-/* 560px */
+@media all and (max-width: 560px){
+    .section1{
+        height: auto;
+        width: 90%;
+        margin: auto;
+    }
+
+    .section1__carte{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .section1 figure{
+        width: 80%;
+    }
+
+    .aside{
+        width: 90%;
+    }
+
+    .aside__carte{
+        flex-direction: column;
+        align-content: center;
+    }
+    
+    aside figure{
+        width: 80%;
+    }
+
+    .section2__carte{
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .section2 figure{
+        width: 90%;
+        height: 10rem;
+    }
+
+    .apropos{ 
+        width: 90%;
+    }
+    .apropos ul{
+        padding-left: 0.5rem;
+        padding-right: 1rem;
+        font-size: 10px;
+    } 
+
+    .apropos h3{
+        font-size: 14px;
+    }
+
+}
